<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.yassineabou.calculator.ui.emi.EMIViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.emi.EmiCalculationFragment"
        android:background="?attr/fourthBgColor">

        <View
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/radius_border"
            app:layout_constraintBottom_toBottomOf="@id/lineSeparatorBackground"
            app:layout_constraintEnd_toEndOf="@id/labelEmiAmount"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="@id/labelEmiAmount"
            app:layout_constraintTop_toTopOf="@id/labelEmiAmount"
            app:layout_constraintVertical_bias="1.0"

            />

        <TextView
            android:id="@+id/labelEmiAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="26dp"
            android:text="@string/emiAmount"
            android:textColor="?attr/secondTextColor"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/emiAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            tools:text="2,394.32"
            android:textColor="?attr/thirdTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelEmiAmount"
            android:textSize="@dimen/_35ssp"
            android:text="@{viewModel.firstEmiCalculation.emiAmount}" />

        <TextView
            android:id="@+id/perMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perMonth"
            android:textColor="?attr/secondTextColor"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emiAmount"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/numberInstallments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@{String.format(@string/installments, viewModel.firstEmiCalculation.numberInstallments)}"
            android:textColor="?attr/secondTextColor"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perMonth"
            tools:ignore="TextContrastCheck"
            tools:text="@string/installments" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            tools:text="@string/totalAmount"
            android:textSize="@dimen/_15ssp"
            android:textColor="?attr/thirdTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberInstallments"
            android:text="@{String.format(@string/totalAmount, viewModel.firstEmiCalculation.totalAmount)}" />

        <TextView
            android:id="@+id/principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19sdp"
            android:layout_marginTop="26dp"
            tools:text="5000000"
            android:textColor="?attr/thirdTextColor"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalAmount"
            android:text="@{viewModel.firstEmiCalculation.principal}" />

        <TextView
            android:id="@+id/labelPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19sdp"
            android:layout_marginTop="3dp"
            android:text="@string/principal"
            android:textColor="?attr/secondTextColor"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/principal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="55555555"
            android:textColor="?attr/thirdTextColor"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="@dimen/_19sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalAmount"
            android:text="@{viewModel.firstEmiCalculation.interest}" />

        <TextView
            android:id="@+id/labelInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/_19sdp"
            android:text="@string/interest"
            android:textColor="?attr/secondTextColor"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interest"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/lineSeparatorCompare"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="19dp"
            android:background="?attr/secondBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPrincipal" />

        <TextView
            android:id="@+id/labelCompare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/labelCompare"
            android:textColor="?attr/secondTextColor"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineSeparatorCompare"
            tools:ignore="TextContrastCheck" />

        <View
            android:id="@+id/lineSeparatorBackground"
            android:layout_width="12dp"
            android:layout_height="3dp"
            android:layout_marginTop="19dp"
            android:background="?attr/fifthBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelCompare" />

        <Button
            android:id="@+id/done"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_button"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_8sdp"
            app:backgroundTint="@color/purple_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/compare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19sdp"
            android:layout_marginTop="11dp"
            android:contentDescription="compare"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineSeparatorCompare"
            app:srcCompat="@drawable/ic_baseline_add_24"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>