<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.emi.EmiCalculatorFragment"
        android:background="?attr/fourthBgColor">

        <View
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/radius_border"
            app:layout_constraintBottom_toBottomOf="@+id/lineSeparatorBackground"
            app:layout_constraintEnd_toEndOf="@+id/labelSecondEmiCalculator"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="@+id/labelSecondEmiCalculator"
            app:layout_constraintTop_toTopOf="@+id/labelSecondEmiCalculator"
            app:layout_constraintVertical_bias="1.0"

            />

        <TextView
            android:id="@+id/labelSecondEmiCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSecondEmiCalculator"
            android:textColor="?attr/thirdTextColor"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:paddingTop="19dp"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:id="@+id/labelLoanAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/loanAmount"
            android:textColor="@color/purple_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSecondEmiCalculator"
            android:layout_marginTop="26dp"
            />

        <EditText
            android:id="@+id/loanAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/hintLoanAmount"
            android:textColor="?attr/secondTextColor"
            android:textColorHint="?attr/secondTextColor"
            android:inputType="numberDecimal"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelLoanAmount"
            android:importantForAutofill="no"
            />

        <View
            android:id="@+id/lineSeparatorLoanAmount"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="4dp"
            android:background="?attr/secondBgColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loanAmount" />

        <TextView
            android:id="@+id/labelInterestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="26dp"
            android:text="@string/InterestRate"
            android:textColor="@color/purple_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineSeparatorLoanAmount" />

        <EditText
            android:id="@+id/interestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/hintInterestRate"
            android:inputType="numberDecimal"
            android:textColor="?attr/secondTextColor"
            android:textColorHint="?attr/secondTextColor"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelInterestRate"
            android:importantForAutofill="no" />

        <View
            android:id="@+id/lineSeparatorInterestRate"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="4dp"
            android:background="?attr/secondBgColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interestRate" />

        <TextView
            android:id="@+id/labelNumberInstallment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="26dp"
            android:text="@string/numberInstallments"
            android:textColor="@color/purple_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineSeparatorInterestRate" />

        <EditText
            android:id="@+id/numberInstallments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:background="@null"
            android:inputType="number"
            android:textColor="?attr/secondTextColor"
            android:textColorHint="?attr/secondTextColor"
            android:hint="@string/hintNumberInstallments"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@+id/labelNumberInstallment"
            android:importantForAutofill="no" />

        <View
            android:id="@+id/lineSeparatorNumberInstallments"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="4dp"
            android:background="?attr/secondBgColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberInstallments" />

        <View
            android:id="@+id/lineSeparatorBackground"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="20dp"
            android:background="?attr/fifthBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineSeparatorNumberInstallments" />

        <Button
            android:id="@+id/emiCalculatorAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="195dp"
            android:background="@drawable/radius_button"
            android:paddingStart="@dimen/_45sdp"
            android:paddingTop="4dp"
            android:paddingEnd="@dimen/_45sdp"
            android:paddingBottom="4dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:backgroundTint="@color/purple_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>